[tool.poetry]
name = "repl-nix-ranepabot7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ranepabot7"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
